add personal profile pictures and the css to cover the whole page

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -612,7 +612,7 @@ a.totop-link {
 
 .about {
     background: url(../images/about.jpg) no-repeat 100% 0  #474645;
-    background-size: contain;
+    background-size: cover;
 }
 .about .inner {
     width: 50%
@@ -643,6 +643,11 @@ a.totop-link {
     top: auto;
     margin: 20px 0 0 0;
 }
+
+#chapterportfolio, #chapterportfolio a, #chapterportfolio h2, #chapterportfolio h3 {
+  color: #eeeeee;
+}
+
 /* ==========================================================================
    #Skills Screen
    ========================================================================== */
