--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -474,7 +474,7 @@ h5 {
     height: 100%;
 }
 .content-wrapper {
-    width: 7356px;
+    width: 8160px;
     position: absolute;
     height: 100%;
     overflow: hidden;
@@ -918,7 +918,7 @@ a.totop-link {
 }
 .introduction-end-con {
     float: right;
-    margin: 30% 0 0;
+    margin: 30% 30% 0;
     width: 30%;
 }
 .introduction-end-con h3 {
